--- a/src/account/signin/_templates/account.signin.component.html
+++ b/src/account/signin/_templates/account.signin.component.html
@@ -1,5 +1,10 @@
 <div class="signin">
     <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
+        <div class="has-error" *ngIf="backendError">
+            <span class="help-block">
+                {{backendError}}
+            </span>
+        </div>
         <div class="panel">
             <div class="panel-heading">Se connecter</div>
             <div class="panel-body">
@@ -9,17 +14,32 @@
                     <button class="btn col-md-4 col-sm-4 btn col-xs-12">Facebook</button>
                 </div>
 
-                <div class="signin__form">
-                    <div class="form-group">
-                        <input type="text"  [(ngModel)] = "login" class="form-control" placeholder="E-mail">
+                <form [formGroup]='signinFormGroup' class="signin__form">
+                    <div class="form-group" [ngClass]="{'has-error': loginErrorMessage}">
+                        <input type="text"  
+                            [(ngModel)] = "login"
+                            formControlName = "login"
+                            class="form-control" placeholder="E-mail">
+                            <span class="help-block" *ngIf="loginErrorMessage">
+                                {{loginErrorMessage}}
+                            </span>
                     </div>
-                    <div class="form-group">
-                        <input type="password" [(ngModel)] = "password" class="form-control" placeholder="Mot de passe">
+                    <div class="form-group" [ngClass]="{'has-error': passwordErrorMessage}">
+                        <input type="password" 
+                            [(ngModel)] = "password" 
+                            formControlName="password"
+                            class="form-control" placeholder="Mot de passe">
+
+                            <span class="help-block" *ngIf="passwordErrorMessage">
+                                {{passwordErrorMessage}}
+                            </span>
                     </div>
                     <div class="form-group signin__form__connectButton">
-                        <button class="btn" (click)="signIn()">Se connecter</button>
+                        <button class="btn" 
+                        [disabled]="!signinFormGroup.valid"
+                        (click)="signIn()">Se connecter</button>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
         <span>Vous n'avez pas de compte ? <b class="signin__registerInstruction"><a [routerLink]="['/account/register']">Inscrivez-vous !</a></b></span>
