--- a/src/common/wizard-stepper/_styles/wizard.stepper.component.scss
+++ b/src/common/wizard-stepper/_styles/wizard.stepper.component.scss
@@ -38,12 +38,12 @@
 }
 
 .stepper_title {
-  padding: 10px 0;
+  padding: 0;
 }
 
 .stepper_title-text {
-  font-weight: bold;
-  font-size: 20px;
+  font-weight: bolder;
+  font-size: 15px;
 }
 
 .step_inactive{
