--- a/src/main-component/_templates/main.component.html
+++ b/src/main-component/_templates/main.component.html
@@ -1,42 +1,29 @@
 <div class="main_component">
     <header class="fluid-container">
-        <nav class="navbar navbar-default">
-            <div class="container">
-                <div class="navigationBar__header">
-                    <a href="/">
-                        {{companyName | uppercase}}
-                    </a>
-                </div>
-                <div class="navbar-header navigationBar__header__barButton">
-                    <button data-toggle="collapse" data-target=".navigationBar__toggle" 
-                    type="button" class=" navbar-toggle pull-right">
-                        <i class="fa fa-lg fa-bars" aria-hidden="true"></i>
-                    </button>
-                </div>
-                <div class="navigationBar__toggle navbar-collapse collapse">
-                    <ul class="list-inline navigationBar__toggle__navigation">
-                        <li class="navigationBar__toggle__navigation__item">
-                            <a class="navigationBar__toggle__navigation__item__signin" [routerLink]="['/account/signin']">
-                                <b>Sign In</b></a>
-                        </li>
-                        <li class="navigationBar__toggle__navigation__item">
-                            <div class="navigationBar__toggle__navigation__item__register">
-                                <a class="btn btn-success btn-sm" [routerLink]="['/account/register']">Register</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+        <nav class="navbar bg-navbar">
+            <div class="navigationBar__header">
+                {{companyName | uppercase}}
+            </div>
+            <div class="navbar-header navigationBar__header__barButton">
+                <button data-toggle="collapse" data-target=".navigationBar__toggle" 
+                type="button" class=" navbar-toggle pull-right">
+                    <i class="fa fa-lg fa-bars" aria-hidden="true"></i>
+                </button>
+            </div>
+            <div class="navigationBar__toggle navbar-collapse collapse">
+                <ul class="list-inline navigationBar__toggle__navigation">
+                    <li class="navigationBar__toggle__navigation__item">
+                        <a class="navigationBar__toggle__navigation__item__signin" [routerLink]="['/account/signin']">
+                            <b>Sign In</b></a>
+                    </li>
+                    <li class="navigationBar__toggle__navigation__item">
+                        <div class="navigationBar__toggle__navigation__item__register">
+                            <a class="btn btn-success btn-sm" [routerLink]="['/account/register']">Register</a>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </nav>
     </header>
-    <!--<input type="text" [(ngModel)] = 'filter'/>
-    <span>{{filter}}</span>
-    <table>
-        <tr *ngFor='let product of products | productsFilter: filter'>
-            <td>
-                {{product.name}}
-            </td>
-        </tr>
-    </table>-->
     <router-outlet></router-outlet>
 </div>
