--- a/src/account/register/_templates/account.register.component.html
+++ b/src/account/register/_templates/account.register.component.html
@@ -1,28 +1,24 @@
-<!--<div class="stepper">
-  <div class="stepper_wrapper row col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
-    <div class="stepper_wrapper_step" *ngFor="let step of steps">
-      <div class="stepper_wrapper_step_circle"><span>{{step.number}}</span></div>
-      <div class="stepper_wrapper_step_title"><span>{{step.title}}</span></div>
-      <div class="stepper_wrapper_step_bar"></div>
+<div class="register">
+  <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
+    <div class="register_wizard">
+        <div class="register_wizard-stepper">
+            <wizard-stepper [steps]='steps' [activeStep]='activeStep'></wizard-stepper>
+        </div>
+
+        <div class="register_wizard-content">
+          <router-outlet></router-outlet>
+        </div>
+
+        <div class="register_wizard-actions .btn-toolbar">
+          <button class="btn btn_confirm pull-right" [disabled]="!isFormValid()"  (click)="Confirm()">Confirm</button>
+          <button class="btn pull-right" [disabled]="!isCurrentStepValid() || activeStep.nextStep == null" (click)="Next()">Next</button>        
+          <button class="btn pull-right" [disabled]="activeStep.previousStep == null" (click)="Previous()">Previous</button>
+        </div>
+    </div>
+    <div class="signin_link">
+      <span>Vous avez déja un compte ? <b class="signin__registerInstruction"><a [routerLink]="['/account/signin']">Connectez-vous !</a></b></span>           
     </div>
   </div>
-</div>-->
-
-<div class="register_wizard">
-    <div class="register_wizard-stepper">
-        <wizard-stepper [steps]='steps' [activeStep]='activeStep'></wizard-stepper>
-    </div>
-
-    <div class="register_wizard-content">
-       <router-outlet></router-outlet>
-    </div>
-
-    <div class="register_wizard-actions">
-      <div class="btn-toolbar pull-right">
-        <button class="btn" [disabled]="activeStep.previousStep == null" (click)="Previous()">Previous</button>
-        <button class="btn" [disabled]="!isCurrentStepValid() || activeStep.nextStep == null" (click)="Next()">Next</button>
-        <button class="btn btn_confirm" [disabled]="!isFormValid()"  (click)="Confirm()">Confirm</button>
-      </div>
-    </div>
 </div>
+
 
