--- a/src/account/signin/_templates/account.signin.component.html
+++ b/src/account/signin/_templates/account.signin.component.html
@@ -1,19 +1,13 @@
 <div class="signin">
-    <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
-        <div class="has-error" *ngIf="backendError">
-            <span class="help-block">
+    <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-12">
+        <div class="signin__errors__block help-block" *ngIf="backendError">
+            <span class="has-error"> 
                 {{backendError}}
             </span>
         </div>
         <div class="panel">
-            <div class="panel-heading">Se connecter</div>
-            <div class="panel-body">
-                <div class="signin__buttons">
-                    <button class="btn col-md-4 col-sm-4 btn col-xs-12">Google</button>
-                    <button class="btn col-md-4 col-sm-4 btn col-xs-12">Github</button>
-                    <button class="btn col-md-4 col-sm-4 btn col-xs-12">Facebook</button>
-                </div>
-
+            <!--<div class="panel-heading">Se connecter</div>-->
+            <div class="panel-body signin-panel">
                 <form [formGroup]='signinFormGroup' class="signin__form">
                     <div class="form-group" [ngClass]="{'has-error': loginErrorMessage}">
                         <input type="text"  
@@ -35,13 +29,15 @@
                             </span>
                     </div>
                     <div class="form-group signin__form__connectButton">
-                        <button class="btn" 
+                        <button class="btn pull-right" 
                         [disabled]="!signinFormGroup.valid"
                         (click)="signIn()">Se connecter</button>
                     </div>
                 </form>
             </div>
         </div>
-        <span>Vous n'avez pas de compte ? <b class="signin__registerInstruction"><a [routerLink]="['/account/register']">Inscrivez-vous !</a></b></span>
+        <div class="register_link">
+            <span>Vous n'avez pas de compte ? <b class="signin__registerInstruction"><a [routerLink]="['/account/register']">Inscrivez-vous !</a></b></span>           
+        </div>
     </div>
 </div>
