--- a/src/account/register/_templates/account.register.component.html
+++ b/src/account/register/_templates/account.register.component.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <div class="signin_link">
-      <span>Vous avez déja un compte ? <b class="signin__registerInstruction"><a [routerLink]="['/account/signin']">Connectez-vous !</a></b></span>           
+      <span>Do you already have an account? <b class="signin__registerInstruction"><a [routerLink]="['/account/signin']">Sign In!</a></b></span>           
     </div>
   </div>
 </div>
