--- a/src/account/register/_templates/account.register.wizard.accountDetails.component.html
+++ b/src/account/register/_templates/account.register.wizard.accountDetails.component.html
@@ -9,7 +9,7 @@
                 [(ngModel)]="accountDetails.login"
                 (ngModelChange)="ngOnChanges($event)"
                 class="form-control" 
-                placeholder="Login" />
+                placeholder="E-mail" />
             
             <span class="help-block" *ngIf="loginErrorMessage">
                 {{loginErrorMessage}}
