--- a/src/main-component/_templates/main.component.html
+++ b/src/main-component/_templates/main.component.html
@@ -25,6 +25,6 @@
             </div>
         </nav>
     </header>-->
-    <hd-header [headerItems] = 'headerItems'></hd-header>
+    <hd-header></hd-header>
     <router-outlet></router-outlet>
 </div>
