--- a/src/dashboard/company-dashboard/_styles/company.dashboard.scss
+++ b/src/dashboard/company-dashboard/_styles/company.dashboard.scss
@@ -22,21 +22,26 @@
                 display: block;
                 transition: 0.3s;
             }
+
+            // &::before {
+            //     content: 'open';
+            //     width: 50px;
+            //     height: 50px;
+            //     color: red;
+            // }
         }
 
         .company_dashboard_sidebar_openclose_button {
             position: fixed;
             height: 50px;
-            width: 40px;
+            width: 50px;
             transition: 0.5s;
-            background-color: lightslategray;
             border: 0;
             font-size: 30px;
         }
 
         .sidebar_collapsed {          
             transition: 0.5s;
-            // margin-left: 0px;
             z-index: 1;
         }
 
