--- a/src/dashboard/company-dashboard/_styles/company.dashboard.scss
+++ b/src/dashboard/company-dashboard/_styles/company.dashboard.scss
@@ -5,14 +5,15 @@
         position: fixed;
         
         .company_dashboard_sidebar_content {
-            height: 100%;
+            height: 90%;
             position: fixed;
             z-index: 1;
             left: 0;
             background-color: #152235 !important;
             overflow-x: hidden;
             transition: 0.5s;
-            padding-top: 60px;
+            top: 60px;
+            bottom: 50px;
 
             a {
                 padding: 8px 8px 8px 32px;
@@ -48,6 +49,18 @@
         .sidebar_toggled {
             transition: 0.5s;
             margin-left: 300px;
+        }
+
+        .company_dashboard_sidebar_logout {
+            height: 7%;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            background-color: #152235 !important;
+            overflow-x: hidden;
+            transition: 0.5s;
+            bottom: 0px;
+            border-top: 1px solid white,
         }
     }
 }
