--- a/src/common/header/_templates/header.component.html
+++ b/src/common/header/_templates/header.component.html
@@ -1,7 +1,11 @@
 <header class="fluid-container">
     <nav class="navbar bg-navbar">
-        <div class="navigationBar__header">
+        <!--<div class="navigationBar__header">
             <a [routerLink]="['/']">{{companyName | uppercase}}</a>
+        </div>-->
+
+        <div class="navigationBar__header_search">
+            <input type="text" class="form-control" placeholder="Search" />            
         </div>
         <div class="navbar-header navigationBar__header__barButton">
             <button data-toggle="collapse" data-target=".navigationBar__toggle" 
