--- a/src/main-component/_templates/main.component.html
+++ b/src/main-component/_templates/main.component.html
@@ -1,30 +1,3 @@
-<div class="main_component">
-    <!--<header class="fluid-container">
-        <nav class="navbar bg-navbar">
-            <div class="navigationBar__header">
-                <a [routerLink]="['/']">{{companyName | uppercase}}</a>
-            </div>
-            <div class="navbar-header navigationBar__header__barButton">
-                <button data-toggle="collapse" data-target=".navigationBar__toggle" 
-                type="button" class=" navbar-toggle pull-right">
-                    <i class="fa fa-lg fa-bars" aria-hidden="true"></i>
-                </button>
-            </div>
-            <div class="navigationBar__toggle navbar-collapse collapse">
-                <ul class="list-inline navigationBar__toggle__navigation">
-                    <li class="navigationBar__toggle__navigation__item">
-                        <a class="navigationBar__toggle__navigation__item__signin" [routerLink]="['/account/signin']">
-                            <b>Sign In</b></a>
-                    </li>
-                    <li class="navigationBar__toggle__navigation__item">
-                        <div class="navigationBar__toggle__navigation__item__register">
-                            <a class="btn btn-success btn-sm" [routerLink]="['/account/register']">Register</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>-->
-    <hd-header></hd-header>
+<div class="main_component2">
     <router-outlet></router-outlet>
 </div>
