--- a/src/dashboard/company-dashboard/_styles/company.dashboard.scss
+++ b/src/dashboard/company-dashboard/_styles/company.dashboard.scss
@@ -1,53 +1,83 @@
 .company_dashboard {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #181818;
+    
+    .company_dashboard_header {
+        transition: 0.5s;
+    }
+
     .company_dashboard_sidebar {
         
-        top: 60px;
+        top: 0;
         position: fixed;
-        
+        width: 100%;
+        transition: 0.5s;
+
         .company_dashboard_sidebar_content {
             height: 90%;
             position: fixed;
             z-index: 1;
             left: 0;
-            background-color: #152235 !important;
+            background-color: #222 !important;
             overflow-x: hidden;
             transition: 0.5s;
-            top: 110px;
+            top: 59px;
+            border-top: 1px solid #181818;
 
             a {
                 padding: 8px 8px 8px 32px;
                 text-decoration: none;
-                font-size: 25px;
+                font-size: 15px;
                 color: #818181;
                 display: block;
-                transition: 0.3s;
+                transition: 0.5s;
             }
         }
-
 
         .company_dashboard_sidebar_openclose {
             height: 7%;
             position: fixed;
-            width: 51px;
-            height: 50px;
+            width: 60px;
+            height: 60px;
             border: none;
             z-index: 1;
             left: 0;
-            background-color: #152246 !important;
+            background-color: #222 !important;
             overflow-x: hidden;
             transition: 0.5s;
             text-align: center;
             cursor: pointer;
-            
+            overflow: visible;
+
             .company_dashboard_sidebar_openclose_button {  
                 float: left;
-                width: 51px;
-                height: 50px;
+                width: 48px;
+                height: 60px;
                 color: white;
                 border: 0;
-                background: #152246;
+                background: #222;
                 transition: 0.5s;
                 z-index: 1;
+                padding: 20px 0;
+            }        
+            
+            .company_dashboard_sidebar_companyName {
+                font-family: 'Gotham SSm', sans-serif;
+                letter-spacing: 3px;
+                font-weight: bold;
+                font-size: 20px;
+                color: white;
+                margin-top: 17px;
+                padding: 0;
+                position: fixed;
+                margin-left: 60px;
+                transition: 0.5s;
             }
         }
 
@@ -66,11 +96,24 @@
             position: fixed;
             z-index: 1;
             left: 0;
-            background-color: #152235 !important;
+            background-color: #181818 !important;
             overflow-x: hidden;
             transition: 0.5s;
             bottom: 0px;
             border-top: 1px solid white;
+        }
+    }
+
+    .company_dashboard_content {
+        transition: 0.5s;
+
+        .company_dashboard_content_header {
+            transition: 0.5s;
+        }
+
+        .company_dashboard_content_content {
+            padding: 0 0 0 80px;
+            transition: 0.5s;
         }
     }
 }
