--- a/src/main-component/_styles/main.component.scss
+++ b/src/main-component/_styles/main.component.scss
@@ -1,12 +1,4 @@
-body {
-  background-color: #fff !important;
-}
-
-.main_component {
-    .bg-navbar {
-        background-color: #152235 !important;
-        height: 60px;
-        border-radius: 0;
-    }
-}
+// body {
+//   background-color: #181818 !important;
+// }
 
