--- a/src/dashboard/company-dashboard/_styles/company.dashboard.scss
+++ b/src/dashboard/company-dashboard/_styles/company.dashboard.scss
@@ -7,6 +7,7 @@
     left: 0;
     right: 0;
     background-color: #181818;
+    color: white;
     
     .company_dashboard_header {
         transition: 0.5s;
