--- a/src/account/register/_templates/account.register.component.html
+++ b/src/account/register/_templates/account.register.component.html
@@ -1,5 +1,10 @@
 <div class="register">
   <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
+    <div class="register__errors__block help-block" *ngIf="backendError">
+        <span class="has-error"> 
+            {{backendError}}
+        </span>
+    </div>
     <div class="register_wizard">
         <div class="register_wizard-stepper">
             <wizard-stepper [steps]='steps' [activeStep]='activeStep'></wizard-stepper>
