--- a/src/common/header/_templates/header.component.html
+++ b/src/common/header/_templates/header.component.html
@@ -14,17 +14,12 @@
             </button>
         </div>
         <div class="navigationBar__toggle navbar-collapse collapse">
-            <ul class="list-inline navigationBar__toggle__navigation">
+            <!--<ul class="list-inline navigationBar__toggle__navigation">
                 <li class="navigationBar__toggle__navigation__item" *ngFor="let item of headerItems">
                     <a class="navigationBar__toggle__navigation__item__signin" [routerLink]="[item.route]">
                         <b>{{item.label}}</b></a>
                 </li>
-                <!--<li class="navigationBar__toggle__navigation__item">
-                    <div class="navigationBar__toggle__navigation__item__register">
-                        <a class="btn btn-success btn-sm" [routerLink]="['/account/register']">Register</a>
-                    </div>
-                </li>-->
-            </ul>
+            </ul>-->
         </div>
     </nav>
 </header>
