--- a/src/account/register/_styles/account.register.component.scss
+++ b/src/account/register/_styles/account.register.component.scss
@@ -57,16 +57,15 @@
 
 .signin_link {
     display: inline-block;
-    padding: 30px 0;
+    padding: 30px 5px;
     width: 100%;
     height: 80px;
     border: 1px solid #e6e6e6;
     background: white;
     text-align: center;
     margin-bottom: 50px; 
-
+    font-size: 15px;
     a {
         text-decoration: none;
     }
 }
-
