--- a/src/account/register/_templates/account.register.component.html
+++ b/src/account/register/_templates/account.register.component.html
@@ -1,9 +1,9 @@
 <div class="register">
-  <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
-    <div class="register__errors__block help-block" *ngIf="backendError">
-        <span class="has-error"> 
-            {{backendError}}
-        </span>
+  <div class="col-md-6 offset-md-3 col-sm-8 offset-sm-2 col-xs-12">
+    <div class="form-control-feedback" *ngIf="backendError">
+        <ngb-alert type="danger" [dismissible]="false">
+            <strong>Error!</strong> {{backendError}}
+        </ngb-alert>
     </div>
     <div class="register_wizard">
         <div class="register_wizard-stepper">
@@ -15,9 +15,9 @@
         </div>
 
         <div class="register_wizard-actions .btn-toolbar">
-          <button class="btn btn_confirm pull-right" *ngIf="activeStep.nextStep == null" [disabled]="!isFormValid()"  (click)="Confirm()">Confirm</button>
-          <button class="btn pull-right" *ngIf="activeStep.nextStep" [disabled]="!isCurrentStepValid() || activeStep.nextStep == null" (click)="Next()">Next</button>        
-          <button class="btn pull-right" *ngIf="activeStep.previousStep" [disabled]="activeStep.previousStep == null" (click)="Previous()">Previous</button>
+          <button class="btn btn_confirm float-right" *ngIf="activeStep.nextStep == null" [disabled]="!isFormValid()"  (click)="Confirm()">Confirm</button>
+          <button class="btn float-right" *ngIf="activeStep.nextStep" [disabled]="!isCurrentStepValid() || activeStep.nextStep == null" (click)="Next()">Next</button>        
+          <button class="btn float-right" *ngIf="activeStep.previousStep" [disabled]="activeStep.previousStep == null" (click)="Previous()">Previous</button>
         </div>
     </div>
     <div class="signin_link">
