--- a/src/main-component/_templates/main.component.html
+++ b/src/main-component/_templates/main.component.html
@@ -1,3 +1,38 @@
 <div class="main_component2">
+    <!--<div class="col">
+        <div ngbDropdown class="d-inline-block">
+        <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Toggle dropdown</button>
+        <div class="dropdown-menu" aria-labelledby="dropdownBasic1">
+            <button class="dropdown-item">Action - 1</button>
+            <button class="dropdown-item">Another Action</button>
+            <button class="dropdown-item">Something else is here</button>
+        </div>
+        </div>
+    </div>
+
+    <p>
+        <ngb-alert [dismissible]="true">
+            <strong>Warning!</strong> Better check yourself, you're not looking too good.
+        </ngb-alert>
+    </p>
+
+    <ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title">Modal title</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p>One fine body&hellip;</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" (click)="c('Close click')">Close</button>
+  </div>
+</ng-template>
+
+<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>
+-->
+
     <router-outlet></router-outlet>
 </div>
