--- a/src/common/header/_templates/header.component.html
+++ b/src/common/header/_templates/header.component.html
@@ -7,12 +7,12 @@
         <div class="navigationBar__header_search">
             <input type="text" class="form-control" placeholder="Search" />            
         </div>
-        <div class="navbar-header navigationBar__header__barButton">
+        <!--<div class="navbar-header navigationBar__header__barButton">
             <button data-toggle="collapse" data-target=".navigationBar__toggle" 
             type="button" class=" navbar-toggle pull-right">
                 <i class="fa fa-lg fa-bars" aria-hidden="true"></i>
             </button>
-        </div>
+        </div>-->
         <div class="navigationBar__toggle navbar-collapse collapse">
             <!--<ul class="list-inline navigationBar__toggle__navigation">
                 <li class="navigationBar__toggle__navigation__item" *ngFor="let item of headerItems">
